<resources>
    <string name="app_name">XanhAndSach</string>
    <string name="mock_up_title">My application</string>
    <string name="google_map_key">AIzaSyCRE8_6MgWmPqa5WaW_W0jfx--o-KQp0Kg</string>
    <string name="authentication_default_error">
        Authentication failed! Try again.
    </string>
    <string name="register_default_error">
        Something wrong! Try again.
    </string>
    <string name="email_prompt">Enter your email please…</string>
    <string name="password_prompt">Enter your password please…</string>
    <string name="displayName_prompt">Enter your display name…</string>
    <string name="login_text">Sign In</string>

    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="displayName_text">Display Name</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have account?</string>
    <string name="email_error">Wrong email format!</string>
    <string name="displayName_error">Between 10 and 20 characters!</string>
    <string name="password_error">Between 7 and 10 characters!</string>

    <string name="default_severity">Testing</string>
    <string name="volunteer_num_title">Volunteers: </string>
    <string name="created_date_title">Last updated: </string>
    <string name="created_date">Created date: </string>
    <string name="author_title">Owner: </string>
    <string name="add_site_prompt">Add your own site!</string>
    <string name="add_image_prompt">Add image</string>

    <string name="ableToCreate">
        * You can create a site where you think is dirty for others to volunteer and clean
    </string>
    <string name="ableToVolunteer">* You can be a volunteer yourself!!!</string>
    <string name="ableToUseMap">
        * You can easily find a site near you using our implemented map!
    </string>
    <string name="ableToCreateReport">
        * You can create report about your own site
    </string>


    <string name="welcomeText">
        Welcome to XanhAndSach!!!
    </string>
    <string name="welcomePromptText">
        Give a hand to build a beautiful society!
    </string>
    <string name="ablePromptText">
        What you can do:
    </string>
    <string name="notification_coming_text">
        Upcoming notifications!
    </string>

    <string-array name="severity_category">
        <item>Quite Dirty</item>
        <item>Dirty</item>
        <item>Extremely Dirty</item>
    </string-array>

    <string-array name="severity_category_search">
        <item>All</item>
        <item>Quite Dirty</item>
        <item>Dirty</item>
        <item>Extremely Dirty</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>