<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activity.AboutUsActivity">

        <include
            android:id="@+id/toolbarId"
            layout="@layout/toolbar"
            android:layout_height="@dimen/_30sdp"
            android:layout_width="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_3sdp"

            android:gravity="center">

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeText"
                style="@style/GeneralCardHeading1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomePromptText"
                style="@style/GeneralCardHeading2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ablePromptText"
                android:textSize="@dimen/_13sdp"
                style="@style/GeneralInfoNormalHeading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/ableToCreate"
                style="@style/GeneralInfoNormal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/ableToVolunteer"
                style="@style/GeneralInfoNormal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/ableToCreateReport"
                style="@style/GeneralInfoNormal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/ableToUseMap"
                style="@style/GeneralInfoNormal" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:scaleType="fitXY"
                android:src="@drawable/header" />
        </LinearLayout>


    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
