<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">

    <include
        android:id="@+id/toolbarId"
        layout="@layout/toolbar"
        android:layout_height="@dimen/_30sdp"
        android:layout_width="match_parent" />

    <ScrollView
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                android:background="@drawable/add_image_border"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:background="@drawable/input_field"
                    app:cardCornerRadius="@dimen/_20sdp">

                    <ImageView
                        android:id="@+id/userImgId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add_icon" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:background="@color/white"
                android:id="@+id/displayNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/displayName_text"
                        android:textColor="@color/primary_dark"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/displayNameError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/displayName_error"
                        android:textColor="@color/error"
                        android:textSize="14sp"
                        android:layout_marginStart="4dp"
                        android:textStyle="italic" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:hintTextColor="@color/primary_dark"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/displayNameSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/primary_dark"
                        android:background="@drawable/input_field"
                        android:hint="@string/displayName_prompt"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_text"
                        android:textColor="@color/primary_dark"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/emailError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_error"
                        android:textColor="@color/error"
                        android:textSize="14sp"
                        android:layout_marginStart="4dp"
                        android:textStyle="italic" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field"
                    android:layout_marginTop="2dp"
                    app:hintTextColor="@color/primary_dark"

                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/primary_dark"
                        android:background="@drawable/input_field"
                        android:hint="@string/email_prompt"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:background="@color/white"
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_text"
                        android:textColor="@color/primary_dark"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/passwordError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_error"
                        android:textColor="@color/error"
                        android:textSize="14sp"
                        android:layout_marginStart="4dp"
                        android:textStyle="italic" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/primary_dark"

                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/primary_dark"
                        android:background="@drawable/input_field"
                        android:hint="@string/password_prompt"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/registerButtonId"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_height="50dp"
                android:textColor="@color/primary_dark"
                android:background="@drawable/button_primary"
                android:text="@string/sign_up_text" />

            <LinearLayout
                android:paddingHorizontal="@dimen/_4sdp"
                android:background="@color/white"
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account" />

                <TextView
                    android:id="@+id/toSignInButtonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_text"
                    android:textColor="@color/primary_200"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_2sdp">

                <TextView
                    android:background="@color/white"
                    android:gravity="center"
                    android:id="@+id/registerFailedId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_default_error"
                    android:textColor="@color/error" />

                <ProgressBar
                    android:id="@+id/progressBarId"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>